tests/typing/bad/testfile-redef-1.c
struct S { int a; };
struct S { int a; };
